z-index fix

--- a/components/temporaryWarning/TemporaryWarning.module.css
+++ b/components/temporaryWarning/TemporaryWarning.module.css
@@ -3,7 +3,7 @@
   /* `position: absolute` would have the same effect because .warning is not inside an element that scrolls. */
   top: 0.25rem;
   right: 1.25rem;
-  z-index: 1;
+  z-index: 10;
   min-width: min(15rem, calc(100% - 1.5rem));
   width: min(calc(50% - 46.875rem / 2 - 1.75rem), 29.17%);
   max-width: calc(100% - 1.5rem);
